--- a/ci/tasks/run-unit.yml
+++ b/ci/tasks/run-unit.yml
@@ -5,5 +5,6 @@ image_resource:
   source: {repository: jrjohnsongoog/omgci}
 inputs:
 - name: omg-src-in
+- name: omg-src-ci
 run:
-  path: omg-src-in/ci/tasks/run-unit.sh
+  path: omg-src-ci/ci/tasks/run-unit.sh
