--- a/ci/docker-image/Dockerfile
+++ b/ci/docker-image/Dockerfile
@@ -14,9 +14,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -y -qq update && apt-get -y -qq insta
   jq
 
 # Set starkandwayne repo and install bosh
-RUN wget -q -O - https://raw.githubusercontent.com/starkandwayne/homebrew-cf/master/public.key | apt-key add - \
-    echo "deb http://apt.starkandwayne.com stable main" | tee /etc/apt/sources.list.d/starkandwayne.list \
-    apt-get -y -qq update \
+RUN wget -q -O - https://raw.githubusercontent.com/starkandwayne/homebrew-cf/master/public.key | apt-key add - && \
+    echo "deb http://apt.starkandwayne.com stable main" | tee /etc/apt/sources.list.d/starkandwayne.list && \
+    apt-get -y -qq update && \
     apt-get -y -qq install bosh-cli
 
 WORKDIR /tmp/docker-build
