--- a/ci/tasks/update-tile.yml
+++ b/ci/tasks/update-tile.yml
@@ -6,10 +6,10 @@ image_resource:
 inputs:
 - name: tile
 - name: omg-src-in
-  path: repo-in
+  path: repo
 - name: omg-src-ci
 outputs:
-- name: repo-out
+- name: repo
 run:
   path: omg-src-ci/ci/tasks/update-tile.sh
 params:
