--- a/ci/docker-image/Dockerfile
+++ b/ci/docker-image/Dockerfile
@@ -17,7 +17,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -y -qq update && apt-get -y -qq insta
 RUN wget -q -O - https://raw.githubusercontent.com/starkandwayne/homebrew-cf/master/public.key | apt-key add - && \
     echo "deb http://apt.starkandwayne.com stable main" | tee /etc/apt/sources.list.d/starkandwayne.list && \
     apt-get -y -qq update && \
-    apt-get -y -qq install bosh-cli
+    apt-get -y -qq install bosh-cli hub
 
 WORKDIR /tmp/docker-build
 
