--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -234,7 +234,7 @@ jobs:
         resource: cf-tile
         trigger: true
         params: { globs: [] }
-      - get: omg-src-in
+      - get: repo
         resource: omg-src-in
       - get: ci-image
       - get: omg-src-ci
