--- a/ci/tasks/create-pull-request.yml
+++ b/ci/tasks/create-pull-request.yml
@@ -8,3 +8,6 @@ inputs:
 - name: omg-src-ci
 run:
   path: omg-src-ci/ci/tasks/create-pull-request.sh
+params:
+  GITHUB_USER: replace-me
+  GITHUB_PASSWORD: replace-me
