forgot the ampersands again

--- a/ci/docker-image/Dockerfile
+++ b/ci/docker-image/Dockerfile
@@ -20,8 +20,8 @@ RUN wget -q -O - https://raw.githubusercontent.com/starkandwayne/homebrew-cf/mas
     apt-get -y -qq install bosh-cli hub
 
 # add yq for updating opsman image
-RUN add-apt-repository ppa:rmescandon/yq \
-    apt update \
+RUN add-apt-repository ppa:rmescandon/yq && \
+    apt update && \
     apt install yq -y
 
 WORKDIR /tmp/docker-build
