--- a/ci/docker-image/Dockerfile
+++ b/ci/docker-image/Dockerfile
@@ -20,9 +20,9 @@ RUN wget -q -O - https://raw.githubusercontent.com/starkandwayne/homebrew-cf/mas
     apt-get -y -qq install bosh-cli hub
 
 # add yq for updating opsman image
-RUN add-apt-repository ppa:rmescandon/yq && \
-    apt update && \
-    apt install yq -y
+RUN add-apt-repository -y ppa:rmescandon/yq && \
+    apt-get -y -qq update && \
+    apt-get -y -qq install yq
 
 WORKDIR /tmp/docker-build
 
