--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -30,6 +30,9 @@ tiles:
     control_elb_names:
     - tcp:((ssh_router_pool))
     control_instance_type: 2xlarge.cpu
+    credhub_internal_provider_keys_0/key: ((credhub_encryption_key))
+    credhub_internal_provider_keys_0/name: default_key
+    credhub_internal_provider_keys_0/primary: true
     credhub_key_encryption_passwords_0/key: ((credhub_key))
     credhub_key_encryption_passwords_0/name: ((credhub_key_name))
     credhub_key_encryption_passwords_0/primary: true
