--- a/src/omg-cli/templates/assets/options/full.yml
+++ b/src/omg-cli/templates/assets/options/full.yml
@@ -27,6 +27,9 @@
       az3_name: ((azs_2))
       cloud_controller/apps_domain: ((apps_domain))
       cloud_controller/system_domain: ((sys_domain))
+      credhub_internal_provider_keys_0/key: ((credhub_encryption_key))
+      credhub_internal_provider_keys_0/name: default_key
+      credhub_internal_provider_keys_0/primary: true
       credhub_key_encryption_passwords_0/key: ((credhub_key))
       credhub_key_encryption_passwords_0/name: ((credhub_key_name))
       credhub_key_encryption_passwords_0/primary: true
