--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -33,6 +33,9 @@ tiles:
     credhub_internal_provider_keys_0/key: ((credhub_encryption_key))
     credhub_internal_provider_keys_0/name: default_key
     credhub_internal_provider_keys_0/primary: true
+    credhub_key_encryption_passwords_0/key: ((credhub_key))
+    credhub_key_encryption_passwords_0/name: ((credhub_key_name))
+    credhub_key_encryption_passwords_0/primary: true
     gorouter_ssl_ciphers: ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
     ha_proxy/skip_cert_verify: true
     haproxy_forward_tls/enable/backend_ca: ((ssl_root_ca))
