--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -11,6 +11,7 @@ tiles:
   name: cf
   ops_files:
   - tiles/srt/features/system_blobstore-external_gcs_service_account.yml
+  - tiles/srt/features/system_blobstore_backup_level-skip_droplets.yml
   - tiles/srt/features/haproxy_forward_tls-disable.yml
   - tiles/srt/features/tcp_routing-enable.yml
   - tiles/srt/resource/control_elb_names.yml
