--- a/src/omg-cli/templates/assets/deployment.yml
+++ b/src/omg-cli/templates/assets/deployment.yml
@@ -10,7 +10,7 @@ tiles:
 - manifest: tiles/srt/product.yml
   name: cf
   ops_files:
-  - tiles/srt/features/system_blobstore-external_gcs_service_account.yml
+  # - tiles/srt/features/system_blobstore-external_gcs_service_account.yml
   - tiles/srt/features/haproxy_forward_tls-disable.yml
   - tiles/srt/features/tcp_routing-enable.yml
   - tiles/srt/resource/control_elb_names.yml
